<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/buttonSetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="23sp"
        android:onClick="setDate"
        android:text="@string/setDate"        
        />     
        
    <TextView
    	android:id="@+id/textView3"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_gravity="center"
        android:textSize="23sp"
        android:text="@string/date_selected"
        android:textAppearance="?android:attr/textAppearanceMedium"        
    	/>
    
    <Button 
        android:id="@+id/buttonSetCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:textSize="23sp"
        android:onClick="resEstadisticas"
        android:text="@string/setCount"        
        />  
    
</LinearLayout>
