<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MENU"
        android:id="@+id/txtMenu"
      	android:textSize="40sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escanear"
        android:id="@+id/btn_scan"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:onClick="btnScan"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estadisticas"
        android:id="@+id/btn_esta"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/btn_scan"
        android:layout_centerInParent="true"
        android:onClick="btnStadistic"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sincronizar"
        android:id="@+id/btn_sync"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/btn_esta"
        android:layout_centerInParent="true"
        android:onClick="btnSync"
        />
</LinearLayout>